Kuberneties/deploy-app-locally.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    generation: 2
    labels:
      app: user-api-app
    name: user-api-app
    namespace: default
    resourceVersion: "2845"
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: user-api-app
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: user-api-app
      spec:
        containers:
        - image: local/user_api_app
          imagePullPolicy: Never
          name: user-api-app
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
kind: List
metadata:
  resourceVersion: ""
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-api-app
  name: user-api-app
  namespace: default
  resourceVersion: "9792"
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: user-api-app
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
