Kuberneties/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /user-api-app
            backend:
              service:
                name: user-api-app
                port:
                  number: 8080
---
